--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "bovcontrol-challenge-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
-  }
+	"name": "bovcontrol-challenge-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix"
+	},
+	"dependencies": {
+		"animate.css": "^4.1.1",
+		"axios": "^0.27.2",
+		"next": "12.1.6",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-icons": "^4.4.0",
+		"styled-components": "^5.3.5"
+	},
+	"devDependencies": {
+		"@next/eslint-plugin-next": "^12.1.6",
+		"babel-plugin-styled-components": "^2.0.7",
+		"eslint": "^8.17.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-next": "^12.1.6",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-import-helpers": "^1.2.1",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.30.0",
+		"eslint-plugin-react-hooks": "^4.5.0",
+		"prettier": "^2.6.2"
+	}
 }
