--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"animate.css": "^4.1.1",
 		"axios": "^0.27.2",
 		"next": "12.1.6",
+		"next-transpile-modules": "^9.0.0",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.4.0",
+		"shade-blend-color": "^1.0.0",
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
