--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
 	"dependencies": {
 		"animate.css": "^4.1.1",
 		"axios": "^0.27.2",
+		"formik": "^2.2.9",
 		"next": "12.1.6",
 		"next-transpile-modules": "^9.0.0",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.4.0",
+		"react-input-mask": "^2.0.4",
+		"react-lottie": "^1.2.3",
 		"shade-blend-color": "^1.0.0",
-		"styled-components": "^5.3.5"
+		"styled-components": "^5.3.5",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^12.1.6",
