--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
 		"animate.css": "^4.1.1",
 		"axios": "^0.27.2",
 		"formik": "^2.2.9",
+		"leaflet": "^1.8.0",
+		"moment": "^2.29.3",
 		"next": "12.1.6",
 		"next-transpile-modules": "^9.0.0",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.4.0",
 		"react-input-mask": "^2.0.4",
+		"react-leaflet": "^4.0.0",
 		"react-lottie": "^1.2.3",
+		"react-select": "^5.3.2",
 		"shade-blend-color": "^1.0.0",
 		"styled-components": "^5.3.5",
 		"yup": "^0.32.11"
