--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	"dependencies": {
 		"animate.css": "^4.1.1",
 		"axios": "^0.27.2",
+		"date-fns": "^2.28.0",
 		"formik": "^2.2.9",
 		"leaflet": "^1.8.0",
 		"moment": "^2.29.3",
 		"next": "12.1.6",
 		"next-transpile-modules": "^9.0.0",
 		"react": "18.1.0",
+		"react-datepicker": "^4.8.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.4.0",
 		"react-input-mask": "^2.0.4",
