--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"animate.css": "^4.1.1",
 		"axios": "^0.27.2",
 		"date-fns": "^2.28.0",
+		"dayjs": "^1.11.3",
 		"formik": "^2.2.9",
 		"leaflet": "^1.8.0",
 		"moment": "^2.29.3",
@@ -26,6 +27,7 @@
 		"react-leaflet": "^4.0.0",
 		"react-lottie": "^1.2.3",
 		"react-select": "^5.3.2",
+		"recharts": "^2.1.10",
 		"shade-blend-color": "^1.0.0",
 		"styled-components": "^5.3.5",
 		"yup": "^0.32.11"
